refactor(anonymous-overflow): remove extra !important
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -50,14 +50,14 @@
     #lib.defaults();
     #lib.css-variables();
 
-    --main-bg: @base !important;
-    --text-color: @text !important;
-    --muted-text-color: @subtext0 !important;
-    --link-color: @blue !important;
-    --meta-bg: @surface1 !important;
-    --input-bg: @mantle !important;
-    --input-bg-hover: @surface1 !important;
-    --divider-color: @overlay0 !important;
+    --main-bg: @base;
+    --text-color: @text;
+    --muted-text-color: @subtext0;
+    --link-color: @blue;
+    --meta-bg: @surface1;
+    --input-bg: @mantle;
+    --input-bg-hover: @surface1;
+    --divider-color: @overlay0;
 
     .view-input:focus {
       border-color: @surface2;
@@ -68,8 +68,8 @@
       filter: @text-filter;
     }
     .answer-meta.accepted {
-      background-color: @green !important;
-      color: @base !important;
+      background-color: @green;
+      color: @base;
 
       .answer-link .icon img {
         filter: @crust-filter;
