fix(anonymous-overflow): codecircles icon
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -80,6 +80,11 @@
       filter: @subtext0-filter;
     }
 
+    [src="/static/codecircles.svg"] {
+      @svg: escape('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 49 48"><circle cx="14.5" cy="33.5" r="14.5" fill="@{green}"/><circle cx="14.5" cy="14.5" r="14.5" fill="@{text}"/><circle cx="34.5" cy="14.5" r="14.5" fill="@{green}"/><circle cx="34.5" cy="33.5" r="14.5" fill="@{text}"/></svg>');
+      content: url("data:image/svg+xml,@{svg}");
+    }
+
     hr {
       border-color: @overlay0;
     }
