fix(google): lavender visited links

--- a/styles/google/catppuccin.user.less
+++ b/styles/google/catppuccin.user.less
@@ -1304,7 +1304,7 @@
       color: @blue;
     }
     a:visited {
-      color: @mauve;
+      color: @lavender;
     }
     .SvoXfb > .x5f7Bc {
       fill: @subtext0;
