fix(migadu-webmail): lavender visited links

--- a/styles/migadu-webmail/catppuccin.user.less
+++ b/styles/migadu-webmail/catppuccin.user.less
@@ -150,7 +150,7 @@
 
     --link-color: @blue;
     #messageItem .b-text-part a:visited {
-      color: @mauve;
+      color: @lavender;
     }
 
     /* Inputs */
