--- a/styles/status.cafe/catppuccin.user.less
+++ b/styles/status.cafe/catppuccin.user.less
@@ -77,11 +77,11 @@
     }
 
     a:not(.flash a) {
-      color: @accent;
+      color: @blue;
     }
 
     a:visited:not(.flash a) {
-      color: darken(@accent, 5%);
+      color: @lavender;
     }
 
     table,
