fix(anonymous-overflow): support instance theme setting
Co-authored-by: WalkQuackBack <quacksareback@duck.com>

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -36,13 +36,21 @@
   domain("overflow.canine.tools") {
   @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
 
-  :root {
+  :root[data-theme="auto"] {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
     }
     @media (prefers-color-scheme: dark) {
       #catppuccin(@darkFlavor);
     }
+  }
+  
+  :root[data-theme="dark"] {
+    #catppuccin(@darkFlavor);
+  }
+
+  :root[data-theme="light"] {
+    #catppuccin(@lightFlavor);
   }
 
   #catppuccin(@flavor) {
