fix(poe): login gradient, add comment about url-prefix

--- a/styles/poe/catppuccin.user.less
+++ b/styles/poe/catppuccin.user.less
@@ -17,6 +17,7 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
+// Using `url-prefix `instead of `domain` prevents a broken theme on the Help Center (https://help.poe.com/).
 @-moz-document url-prefix("https://poe.com") {
   :root:not(.dark, .light) {
     @media (prefers-color-scheme: light) {
@@ -100,6 +101,7 @@
     }
 
     // Login
+    --fade-bottom-gradual: linear-gradient(to bottom,transparent 0%,fade(@crust, 50%) 60%,@mantle 90%,@mantle 100%);
     --fg-base--ignore-light-mode: @text;
     
     
