fix(regex101): dark header, sidebar buttons

--- a/styles/regex101/catppuccin.user.less
+++ b/styles/regex101/catppuccin.user.less
@@ -34,7 +34,7 @@
     #lib.defaults();
     #lib.css-variables();
     
-    --primary-color: @base;
+    --primary-color: @crust;
     --primary-contrast-color: @accent;
 
     --app-color: @text;
@@ -58,17 +58,17 @@
     --danger-color: @red;
 
     --misc-button-icon-color: @subtext1;
-    --misc-button-bg: @surface1;
+    --misc-button-bg: @surface0;
     --misc-button-hover-bg: @surface1;
     --misc-button-active-bg: @surface2;
-    --misc-button-active-color: @text;
+    --misc-button-active-color: @base;
     --misc-button-highlight-bg: fade(@green, 40%);
 
-    --editor-active-bg: @overlay1;
-    --library-active-bg: fade(@yellow, 40%);
-    --account-active-bg: fade(@green, 40%);
-    --quiz-active-bg: fade(@teal, 40%);
-    --settings-active-bg: fade(@pink, 40%);
+    --editor-active-bg: @overlay2;
+    --library-active-bg: @yellow;
+    --account-active-bg: @green;
+    --quiz-active-bg: @teal;
+    --settings-active-bg: @pink;
 
     #hsl-variables(--button-bg, @surface0);
     #hsl-variables(--button-ok-bg, @mantle);
