fix(zelda-dungeon): lint issues

--- a/styles/zelda-dungeon/catppuccin.user.less
+++ b/styles/zelda-dungeon/catppuccin.user.less
@@ -1,11 +1,11 @@
 /* ==UserStyle==
-@name ZeldaDungeon Catppuccin
+@name Zelda Dungeon Catppuccin
 @namespace github.com/catppuccin/userstyles/styles/zelda-dungeon
-@homepageURL https://github.com/catppuccin/userstyles
+@homepageURL https://github.com/catppuccin/userstyles/tree/main/styles/zelda-dungeon
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/zelda-dungeon/catppuccin.user.less
-@supportURL https://github.com/catppuccin/userstyles/issues
-@description Soothing pastel theme for ZeldaDungeon
+@supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Azelda-dungeon
+@description Soothing pastel theme for Zelda Dungeon
 @author Catppuccin
 @license MIT
 
