fix(brave-search): change some variable names

--- a/styles/brave-search/catppuccin.user.less
+++ b/styles/brave-search/catppuccin.user.less
@@ -38,24 +38,25 @@
     #lib.defaults();
 
     &, .is-serp {
-      --color-page-background: @base;
+      --color-search-background-page: @base;
       --color-container-background: @crust;
       --color-container-highlight: @mantle;
       --color-serp-header-background: @crust;
       --color-text-interactive: @accent;
-      --color-divider-subtle: @surface0;
-      --color-divider-interactive: @accent;
+      --color-search-divider-subtle: @surface0;
+      --color-search-divider-interactive: @accent;
       --color-text-primary: @text;
-      --color-serp-bar-bg: @mantle;
-      --color-serp-divider-subtle-container: @surface0;
+      --color-search-background-search-bar: @mantle;
+      --color-search-divider-subtle-container: @surface0;
+      --color-search-background-suggest-highlight: @surface1;
       --color-gray-30: @subtext0;
       --color-gray-40: @overlay2;
       --color-text-secondary: @subtext1;
       --color-text-tertiary: @subtext0;
       --color-icon-default: @overlay2;
-      --color-serp-snippet-background: @base;
-      --color-link-default: @blue;
-      --color-link-visited: @mauve;
+      --color-search-background-highlight: @mantle;
+      --color-text-interactive: @blue;
+      --color-link-visited: @lavender;
       --color-tabs-search-text-default: @accent;
       --color-primary-50: @accent;
       --color-primitive-primary-60: @accent;
@@ -63,7 +64,7 @@
       --color-container-interactive: transparent;
       --color-button-background: @accent;
       --color-button-disabled: fade(@surface2, 30%);
-      --color-serp-settings-background: @mantle;
+      --color-search-background-settings: @mantle;
     }
     dialog {
       color: @text;
