fix(zelda-dungeon): use less variables directly

--- a/styles/zelda-dungeon/catppuccin.user.less
+++ b/styles/zelda-dungeon/catppuccin.user.less
@@ -18,187 +18,152 @@
 
 @-moz-document domain("zeldadungeon.net") {
 
-	:root:not(.dark, .light) {
-		@media (prefers-color-scheme: light) {
-			#catppuccin(@lightFlavor);
-		}
-		@media (prefers-color-scheme: dark) {
-			#catppuccin(@darkFlavor);
-		}
-	}
+    :root:not(.dark, .light) {
+        @media (prefers-color-scheme: light) {
+            #catppuccin(@lightFlavor);
+        }
+        @media (prefers-color-scheme: dark) {
+            #catppuccin(@darkFlavor);
+        }
+    }
 
-	:root {
-		&.dark {
-			#catppuccin(@darkFlavor);
-		}
-		&.light {
-			#catppuccin(@lightFlavor);
-		}
-	}
+    :root {
+        &.dark {
+            #catppuccin(@darkFlavor);
+        }
+        &.light {
+            #catppuccin(@lightFlavor);
+        }
+    }
 
-	#catppuccin(@flavor) {
-		#lib.palette();
-		#lib.defaults();
+    #catppuccin(@flavor) {
+        #lib.palette();
+        #lib.defaults();
 
-		--ctp-bg: @base;
-		--ctp-mantle: @mantle;
-		--ctp-crust: @crust;
+        /* WordPress colors */
+        --wp--preset--color--black: @base;
+        --wp--preset--color--white: @text;
+        --wp--preset--color--cyan-bluish-gray: @subtext1;
+        --wp--preset--color--pale-cyan-blue: @blue;
+        --wp--preset--color--vivid-cyan-blue: @blue;
+        --wp--preset--color--vivid-purple: @accent;
+        --wp--preset--color--vivid-red: @red;
+        --wp--preset--color--vivid-green-cyan: @green;
+        --wp--preset--color--luminous-vivid-amber: @yellow;
 
-		--ctp-text: @text;
-		--ctp-subtext1: @subtext1;
-		--ctp-subtext0: @subtext0;
+        body, #footer {
+            background-color: @crust !important;
+        }
 
-		--ctp-surface0: @surface0;
-		--ctp-surface1: @surface1;
-		--ctp-surface2: @surface2;
+        #wrapper {
+            background-color: @base;
+            color: @text;
+        }
 
-		--ctp-overlay0: @overlay0;
-		--ctp-overlay1: @overlay1;
+        .mobilenav-menu, #content, #search-bar {
+            background-color: @mantle !important;
+            color: white;
+        }
 
-		--ctp-accent: @accent;
+        #sitenav {
+            background-color: @green !important;
+        }
 
-		--ctp-red: @red;
-		--ctp-green: @green;
-		--ctp-yellow: @yellow;
-		--ctp-blue: @blue;
+        #sitenav-inner > ul > li > a {
+            color: @crust !important;
+            &:hover {
+                background-color: @crust !important;
+                color: @green !important;
+            }
+        }
 
-		--wp--preset--color--black: var(--ctp-bg);
-		--wp--preset--color--white: var(--ctp-text);
+        #mw-panel, #mw-head, .mw-list-item, .p-body, .p-header {
+            background-color: @crust !important;
+        }
 
-		--wp--preset--color--cyan-bluish-gray: var(--ctp-subtext1);
-		--wp--preset--color--pale-cyan-blue: var(--ctp-blue);
-		--wp--preset--color--vivid-cyan-blue: var(--ctp-blue);
-		--wp--preset--color--vivid-purple: var(--ctp-accent);
+        .notice-content {
+            background-color: @accent !important;
+            color: @crust !important;
+        }
 
-		--wp--preset--color--vivid-red: var(--ctp-red);
-		--wp--preset--color--vivid-green-cyan: var(--ctp-green);
-		--wp--preset--color--luminous-vivid-amber: var(--ctp-yellow);
+        .summary, .news-readmore, .box {
+            background-color: @surface2;
+        }
 
+        nav > * > *, #sitenav-search-bar, .block-header {
+            background: linear-gradient(to bottom, @mantle 0%, @crust 100%);
+        }
 
-		body, #footer {
-			background-color: var(--ctp-crust) !important;
-		}
+        #submit-bar, h1 {
+            color: @green !important;
+            border-color: @green !important;
+        }
 
-		#wrapper {
-			background-color: var(--ctp-bg);
-			color: var(--ctp-text);
-		}
+        #submit-bar:hover {
+            color: @crust !important;
+            background-color: @green !important;
+        }
 
-		.mobilenav-menu, #content, #search-bar {
-			background-color: var(--ctp-mantle) !important;
-			color: white;
-		}
+        .flyout, .block-container, .dropdown-menu {
+            background-color: @mantle;
+        }
 
-		#sitenav {
-			background-color: var(--ctp-green) !important;
-		}
+        p, li, span, h2 {
+            color: @text;
+        }
 
-		#sitenav-inner > ul > li > a {
-			color: var(--ctp-crust) !important;
+        a {
+            color: @accent !important;
+        }
 
-			&:hover {
-			background-color: var(--ctp-crust) !important;
-			color: var(--ctp-green) !important;
-			}
-		}
+        a:hover {
+            color: @text !important;
+        }
 
+        a > * {
+            color: @green;
+        }
 
-		#mw-panel, #mw-head, .mw-list-item, .p-body, .p-header {
-			background-color: var(--ctp-crust) !important;
-		}
+        a > *:hover {
+            color: @text !important;
+        }
 
-		.notice-content {
-			background-color: var(--ctp-accent) !important;
-			color: var(--ctp-crust) !important;
-		}
+        pre, code {
+            background-color: @mantle;
+            color: @text;
+        }
 
-		.summary, .news-readmore, .box {
-			background-color: var(--ctp-surface2);
-		}
+        hr {
+            border-color: @surface1;
+        }
 
-		nav > * > *, #sitenav-search-bar, .block-header {
-			background: linear-gradient(to bottom, var(--ctp-mantle) 0%, var(--ctp-crust) 100%);
-		}
+        ::selection {
+            background-color: @overlay0;
+            color: @text;
+        }
 
-		#submit-bar, h1 {
-			color: var(--ctp-green) !important;
-			border-color: var(--ctp-green) !important;
-		}
+        .p-sectionLinks, .p-nav, .p-nav-list.js-offCanvasNavSource, .p-navgroup-link {
+            background-color: @crust !important;
+            border-color: @accent;
+        }
 
-		#submit-bar:hover {
-			color: var(--ctp-crust) !important;
-			background-color: var(--ctp-green) !important;
-		}
+        .button--icon, .button--icon > * {
+            background-color: @accent !important;
+            color: @crust !important;
+        }
 
-		.flyout, .block-container, .dropdown-menu {
-			background-color: var(--ctp-mantle);
-		}
+        .button--icon:hover, .button--icon:hover > * {
+            background-color: @green !important;
+            outline-color: @accent !important;
+        }
 
-		p,
-		li,
-		span,
-		h2 {
-			color: var(--ctp-text);
-		}
+        .a-bolt:hover, span.button-text:hover {
+            color: @crust !important;
+        }
 
-		a {
-			color: var(--ctp-accent) !important;
-		}
-
-		a:hover {
-			color: var(--ctp-text) !important;
-		}
-
-		a> * {
-			color: var(--ctp-green)
-		}
-
-		a > *:hover {
-			color: var(--ctp-text) !important;
-		}
-
-		pre,
-		code,
-		{
-			background-color: var(--ctp-mantle);
-			color: var(--ctp-text);
-		}
-
-		hr {
-			border-color: var(--ctp-surface1);
-		}
-
-		::selection {
-			background-color: var(--ctp-overlay0);
-			color: var(--ctp-text);
-		}
-  
-    .p-sectionLinks, .p-nav, .p-nav-list.js-offCanvasNavSource, .p-navgroup-link {
-			background-color: var(--ctp-crust) !important;
-			border-color: var(--ctp-accent);
-		}
-
-		.button--icon,
-		.button--icon > * {
-			background-color: var(--ctp-accent) !important;
-			color: var(--ctp-crust) !important;
-		}
-
-		.button--icon:hover,
-		.button--icon:hover > * {
-			background-color: var(--ctp-green) !important;
-			outline-color: var(--ctp-accent) !important;
-		}
-		
-		.a-bolt:hover, span.button-text:hover {
-			color: var(--ctp-crust) !important;
-		}
-
-
-		.p-nav-list.js-offCanvasNavSource > li:hover, .is-selected > a {
-			background-color: var(--ctp-accent) !important;
-			color: var(--ctp-crust) !important;
-		}
-    
-	}
+        .p-nav-list.js-offCanvasNavSource > li:hover, .is-selected > a {
+            background-color: @accent !important;
+            color: @crust !important;
+        }
+    }
 }
