fix(lib/mediawiki): change tab list framed state colours to latte fade

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -164,8 +164,8 @@
 
     --background-color-input-binary--checked: @accent;
 
-    --background-color-tab-list-item-framed--hover: rgba(255, 255, 255, 0.3);
-    --background-color-tab-list-item-framed--active: rgba(255, 255, 255, 0.65);
+    --background-color-tab-list-item-framed--hover: fade(@catppuccin[@latte][@base], 30%);
+    --background-color-tab-list-item-framed--active: fade(@catppuccin[@latte][@base], 65%);
 
     --border-base: 1px solid var(--border-color-base);
     --border-subtle: 1px solid var(--border-color-subtle);
