Working on radio and checkbox. Still need to add disabled.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -169,6 +169,92 @@
       }
     }
 
+    // Radio bg.
+    .cdx-radio__icon {
+      background-color: @base !important;
+
+      &:hover {
+        background-color: @surface0 !important;
+      }
+
+      &:active, &:focus-within {
+        background-color: @surface1 !important;
+      }
+
+      &:checked {
+        background-color: @accent !important;
+      }
+
+      &:disabled {
+        background-color: @mantle !important;
+      }
+    }
+
+    .oo-ui-icon-search, .mw-ui-icon-search::before {
+      @svg: escape(
+        '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><title>search</title><path d="M12.2 13.6a7 7 0 1 1 1.4-1.4l5.4 5.4-1.4 1.4zM3 8a5 5 0 1 0 10 0A5 5 0 0 0 3 8" fill="currentColor"/></svg>'
+      );
+      fill: @blue !important;
+      background-image: url("data:image/svg+xml,@{svg}") !important;
+    }
+
+    // Radio ring.
+    button[type="radio"],
+    input[type="radio"],
+    .cdx-radio__input {
+      &, &:enabled {
+        background-color: @surface0 !important;
+      }
+
+      &:hover {
+        background-color: @accent !important;
+      }
+
+      &:active, &:focus-within {
+        background-color: darken(@accent, 5%) !important;
+      }
+
+      &:checked {
+        background-color: @base !important;
+      }
+
+      &:disabled {
+        background-color: @mantle !important;
+      }
+    }
+
+    button[type="checkbox"],
+    input[type="checkbox"] {
+      &, &:enabled {
+        background-color: @surface0 !important;
+
+        &:after {
+          background-color: @text !important;
+        }
+      }
+
+      &:hover {
+        background-color: @surface1 !important;
+      }
+
+      &:active, &:focus-within {
+        background-color: @surface2 !important;
+      }
+
+      &:checked {
+        background-color: @accent !important;
+        &:after {
+          background-color: @base !important;
+        }
+      }
+
+      &:disabled {
+        &:after {
+          background-color: @subtext0 !important;
+        }
+      }
+    }
+
     button[type="submit"], input[type="submit"] {
       &, &:enabled {
         color: @base !important;
