--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -105,6 +105,11 @@
       &:invalid {
         color: @maroon !important;
       }
+
+      &:disabled {
+        background-color: @crust !important;
+        color: @mantle !important;
+      }
     }
 
     form {
@@ -165,7 +170,7 @@
       }
 
       &:disabled {
-        fill: @subtext0 !important;
+        fill: @mantle !important;
       }
     }
 
@@ -190,12 +195,51 @@
       }
     }
 
-    .oo-ui-icon-search, .mw-ui-icon-search::before {
-      @svg: escape(
-        '<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20"><title>search</title><path d="M12.2 13.6a7 7 0 1 1 1.4-1.4l5.4 5.4-1.4 1.4zM3 8a5 5 0 1 0 10 0A5 5 0 0 0 3 8" fill="currentColor"/></svg>'
-      );
-      fill: @blue !important;
-      background-image: url("data:image/svg+xml,@{svg}") !important;
+    // FIXME: this only applies to the icon itself, and clicking ON the icon. We need to
+    // nest this into a proper solution which uses focus within the parent container, of
+    // input[type="search"], I suspect.
+    .cdx-icon svg,
+    .skin-invert-image img,
+    .skin-invert,
+    .oo-ui-iconElement-icon:not(
+      .oo-ui-image-progressive,
+      .oo-ui-image-destructive,
+      .oo-ui-checkboxInputWidget-checkIcon,
+      .oo-ui-image-invert,
+      .mw-no-invert
+    ),
+    .oo-ui-indicatorElement-indicator {
+      &, &:enabled {
+        filter: @subtext0-filter !important;
+      }
+
+      &:hover {
+        filter: @text-filter !important;
+      }
+
+      &:active, &:focus-within {
+        filter: @accent-filter !important;
+      }
+
+      &:disabled {
+        filter: @mantle-filter !important;
+      }
+    }
+
+    .mw-protection-indicator-icon--lock {
+      background-color: @text !important;
+
+      &:hover {
+        background-color: @accent !important;
+      }
+
+      &:active, &:focus-within {
+        background-color: darken(@accent, 5%) !important;
+      }
+
+      &:disabled {
+        background-color: @mantle !important;
+      }
     }
 
     // Radio ring.
@@ -250,7 +294,7 @@
 
       &:disabled {
         &:after {
-          background-color: @subtext0 !important;
+          background-color: @mantle !important;
         }
       }
     }
@@ -273,7 +317,7 @@
       }
 
       &:invalid {
-        color: @maroon !important;
+        color: @mantle !important;
       }
     }
 
