Push radio widget theming upstream.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -174,23 +174,24 @@
       }
     }
 
-    // Radio bg.
-    .cdx-radio__icon {
-      background-color: @base !important;
-
-      &:hover {
+    .oo-ui-radioInputWidget[type="radio"] {
+      + span, &:enabled + span {
         background-color: @surface0 !important;
       }
 
-      &:active, &:focus-within {
+      &:hover + span {
         background-color: @surface1 !important;
       }
 
-      &:checked {
+      &:active + span, &:focus-within + span {
+        background-color: darken(@accent, 5%) !important;
+      }
+
+      &:checked + span {
         background-color: @accent !important;
       }
 
-      &:disabled {
+      &:disabled + span {
         background-color: @mantle !important;
       }
     }
@@ -235,31 +236,6 @@
 
       &:active, &:focus-within {
         background-color: darken(@accent, 5%) !important;
-      }
-
-      &:disabled {
-        background-color: @mantle !important;
-      }
-    }
-
-    // Radio ring.
-    button[type="radio"],
-    input[type="radio"],
-    .cdx-radio__input {
-      &, &:enabled {
-        background-color: @surface0 !important;
-      }
-
-      &:hover {
-        background-color: @accent !important;
-      }
-
-      &:active, &:focus-within {
-        background-color: darken(@accent, 5%) !important;
-      }
-
-      &:checked {
-        background-color: @base !important;
       }
 
       &:disabled {
