Commit radio input changes!
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -174,25 +174,35 @@
       }
     }
 
-    .oo-ui-radioInputWidget[type="radio"] {
+    .oo-ui-radioInputWidget [type="radio"] {
       + span, &:enabled + span {
-        background-color: @surface0 !important;
+        background-color: @base !important;
+        border-color: @surface0 !important;
       }
 
       &:hover + span {
-        background-color: @surface1 !important;
-      }
-
-      &:active + span, &:focus-within + span {
-        background-color: darken(@accent, 5%) !important;
-      }
-
-      &:checked + span {
         background-color: @accent !important;
       }
 
+      &:active + span, &:focus-within + span {
+        background-color: darken(@accent, 10%) !important;
+        border-color: @surface0 !important;
+      }
+
+      &:checked {
+        + span {
+          background-color: @surface0 !important;
+          border-color: @accent !important;
+        }
+
+        &:hover + span {
+          background-color: darken(@accent, 5%) !important;
+          border-color: @surface0 !important;
+        }
+      }
+
       &:disabled + span {
-        background-color: @mantle !important;
+        border-color: @mantle !important;
       }
     }
 
