Radio inputs - stylised!
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/lib/mediawiki.less
+++ b/lib/mediawiki.less
@@ -278,13 +278,68 @@
       background-image: url("data:image/svg+xml,@{svg}");
     }
 
-    .oo-ui-radioInputWidget [type="radio"] + span {
-      background-color: @text;
+    .cdx-radio__input {
+      + .cdx-radio__icon, &:enabled + .cdx-radio__icon {
+        background-color: @base !important;
+        border-color: @surface0 !important;
+      }
+
+      &:hover + .cdx-radio__icon {
+        background-color: @accent !important;
+      }
+
+      &:active + .cdx-radio__icon, &:focus-within + .cdx-radio__icon {
+        background-color: darken(@accent, 10%) !important;
+        border-color: @surface0 !important;
+      }
+
+      &:checked {
+        + .cdx-radio__icon {
+          background-color: @surface0 !important;
+          border-color: @accent !important;
+        }
+
+        &:hover + .cdx-radio__icon {
+          background-color: darken(@accent, 5%) !important;
+          border-color: @surface0 !important;
+        }
+      }
+
+      &:disabled + .cdx-radio__icon {
+        border-color: @mantle !important;
+      }
     }
 
-    .cdx-radio__input:enabled:checked + .cdx-radio__icon,
-    .oo-ui-radioInputWidget [type="radio"]:checked + span {
-      background-color: @base;
+    .oo-ui-radioInputWidget [type="radio"] {
+      + span, &:enabled + span {
+        background-color: @base !important;
+        border-color: @surface0 !important;
+      }
+
+      &:hover + span {
+        background-color: @accent !important;
+      }
+
+      &:active + span, &:focus-within + span {
+        background-color: darken(@accent, 10%) !important;
+        border-color: @surface0 !important;
+      }
+
+      &:checked {
+        + span {
+          background-color: @surface0 !important;
+          border-color: @accent !important;
+        }
+
+        &:hover + span {
+          background-color: darken(@accent, 5%) !important;
+          border-color: @surface0 !important;
+        }
+      }
+
+      &:disabled + span {
+        border-color: @mantle !important;
+      }
     }
 
     /* View source */
