--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -26,8 +26,7 @@
     ::file-selector-button,
     .rbox label,
     .text-button,
-    input[type="reset"],
-    input[type="submit"] {
+    input, select, select option, textarea {
       color            : @text !important;
       background-color : @surface0 !important;
       border-color     : @surface1 !important;
@@ -44,12 +43,16 @@
       }
 
       &:active, &:focus-within {
-        background-color : @surface2 !important;
-        border-color     : @accent !important;
+        background-color : fade(@accent, 30%) !important;
       }
 
-      &:invalid {
-        color : @maroon !important;
+      &:checked {
+        background-color : @accent !important;
+        border-color     : @overlay0 !important;
+      }
+
+      &:invalid, &:user-invalid {
+        color : @red !important;
       }
 
       &:disabled {
@@ -57,7 +60,7 @@
         color            : @mantle !important;
       }
 
-      &:link, &:enabled {
+      &:link, &:link:enabled {
         color : @blue !important;
 
         &:hover {
@@ -115,38 +118,6 @@
 
       &:disabled {
         fill : @mantle !important;
-      }
-    }
-
-    .oo-ui-radioInputWidget [type="radio"] {
-      + span, &:enabled + span {
-        background-color : @base !important;
-        border-color     : @surface0 !important;
-      }
-
-      &:hover + span {
-        background-color : @accent !important;
-      }
-
-      &:active + span, &:focus-within + span {
-        background-color : darken(@accent, 10%) !important;
-        border-color     : @surface0 !important;
-      }
-
-      &:checked {
-        + span {
-          background-color : @surface0 !important;
-          border-color     : @accent !important;
-        }
-
-        &:hover + span {
-          background-color : darken(@accent, 5%) !important;
-          border-color     : @surface0 !important;
-        }
-      }
-
-      &:disabled + span {
-        border-color : @mantle !important;
       }
     }
 
@@ -231,51 +202,6 @@
       }
     }
 
-    textarea {
-      color            : @text !important;
-      background-color : @surface0 !important;
-      border-color     : @surface1 !important;
-
-      &:hover {
-        background-color : @surface1 !important;
-        border-color     : @surface2 !important;
-      }
-
-      &:active, &:focus-within {
-        background-color : @surface2 !important;
-        border-color     : @accent !important;
-      }
-
-      &:user-invalid {
-        color : @red !important;
-      }
-    }
-
-    input[type="password"],
-    input[type="search"],
-    input[type="text"],
-    select,
-    select option,
-    textarea {
-      color            : @text !important;
-      background-color : @surface0 !important;
-      border-color     : @surface1 !important;
-
-      &:hover {
-        background-color : @surface1 !important;
-        border-color     : @surface2 !important;
-      }
-
-      &:focus-within {
-        background-color : fade(@accent, 30%);
-      }
-
-      &:active, &:checked {
-        background-color : @surface2 !important;
-        border-color     : @overlay0 !important;
-      }
-    }
-
     .checklist {
       color            : @text !important;
       background-color : @surface0 !important;
@@ -324,31 +250,8 @@
       }
 
       th {
-        color            : @peach !important;
         background-color : @mantle !important;
         border-color     : @overlay0 !important;
-
-        a {
-          color           : @peach !important;
-          text-decoration : underline dotted;
-
-          &:link {
-            color           : @peach !important;
-            text-decoration : underline dotted;
-
-            &:hover {
-              color : @sky !important;
-            }
-
-            &:active, &:focus-within {
-              color : @sapphire !important;
-            }
-
-            &:visited {
-              color : @lavender !important;
-            }
-          }
-        }
       }
 
       &.head tr {
