Push big change to some other stuff again, cleaning up.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -167,41 +167,6 @@
       }
     }
 
-    button[type="checkbox"],
-    input[type="checkbox"] {
-      background-color : @surface0 !important;
-
-      &:enabled {
-        background-color : @surface0 !important;
-
-        &::after {
-          background-color : @text !important;
-        }
-      }
-
-      &:hover {
-        background-color : @surface1 !important;
-      }
-
-      &:active, &:focus-within {
-        background-color : @surface2 !important;
-      }
-
-      &:checked {
-        background-color : @accent !important;
-
-        &::after {
-          background-color : @base !important;
-        }
-      }
-
-      &:disabled {
-        &::after {
-          background-color : @mantle !important;
-        }
-      }
-    }
-
     .checklist {
       color            : @text !important;
       background-color : @surface0 !important;
@@ -462,7 +427,7 @@
       }
     }
 
-    a.rss-icon {
+    a.rss-icon, a.rss-icon * {
       filter : @peach-filter;
 
       &:link, &:enabled {
@@ -509,7 +474,7 @@
     }
 
     #archdev-navbar li a {
-      color : @accent !important;
+      color : darken(@accent, 5%) !important;
     }
 
     #archnavbar {
@@ -523,11 +488,11 @@
       }
 
       #archnavbarlist li a {
-        color : @accent !important;
+        color : darken(@accent, 5%) !important;
       }
 
       ul li.anb-selected a {
-        color : darken(@accent, 10%) !important;
+        color : @accent !important;
       }
 
       ul li a:hover {
@@ -536,7 +501,7 @@
     }
 
     #archnavbar.anb-home ul li#anb-home a {
-      color : darken(@accent, 10%) !important;
+      color : @accent !important;
     }
   }
 }
@@ -559,7 +524,7 @@
     #lib.css-variables();
 
     #archnavbar ul li#anb-packages a {
-      color : darken(@accent, 10%) !important;
+      color : @accent !important;
     }
   }
 }
@@ -582,7 +547,7 @@
     #lib.css-variables();
 
     #archnavbar ul li#anb-aur a {
-      color : darken(@accent, 10%) !important;
+      color : @accent !important;
     }
   }
 }
@@ -605,16 +570,16 @@
     #lib.css-variables();
 
     #archnavbar ul li#anb-security a {
-      color : darken(@accent, 10%) !important;
+      color : @accent !important;
     }
 
     .navbar ul li {
       a[href="/"] {
-        color : darken(@accent, 10%) !important;
+        color : @accent !important;
       }
 
       b {
-        color : darken(@accent, 10%) !important;
+        color : @accent !important;
       }
     }
   }
