Fix quick bug with blockquotes.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -1153,6 +1153,7 @@
         }
 
         blockquote, .quotebox {
+          color: @text !important;
           border-color: @accent !important;
           border-style: none none none solid !important;
           background-color: @mantle !important;
